# hdx-file-comparison

./: .gitignore  2024-07-25-HDX-Notifications-change-discovery.docx  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  pyproject.toml
src/hdx_file_comparison/: cli.py  time_limiter.py  utilities.py
src/hdx_file_comparison.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_utilities.py
tests/fixtures/: 2024-05-12-wfp_food_prices_afg.csv  2024-05-12-wfp_food_prices_afg_qc.csv  2024-07-14-wfp_food_prices_afg.csv  2024-07-14-wfp_food_prices_afg_qc.csv  2024-07-21-wfp_food_prices_afg.csv  2024-07-21-wfp_food_prices_afg_changed.csv  2024-07-21-wfp_food_prices_afg_qc.csv  2024-07-21-wfp_food_prices_afg_qc_changed.csv  2024-07-23-wfp-afghanistan-dataset.json
