[project]
name = "hdx_file_comparison"
version = "2024.7.1"
description = "HDX File Comparison Playground"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
  {email = "ian.hopkinson@un.org"},
  {name = "Ian Hopkinson"}
]

dependencies = [
  "multiprocess==0.70.16",
  "click",
  "hatch",
  "pytest",
  "pytest-cov",
  "black==23.10.0",
  "flake8",
  "pylint"
]

[project.scripts]
hdx-compare = "hdx_file_comparison.cli:hdx_compare"

[project.urls]
repository = "https://github.com/OCHA-DAP/hdx-file-comparison"

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''